--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
 
     <div id="policy" class="section">
         <h3>Policy</h3>
+        <img src="./無題.png" alt="icon" style="
+                width: 150px;
+                height: 150px;
+                border-radius: 50% !important;
+                object-fit: cover;
+            ">
         <p>利用規約:</p>
         <p>ConaStudioおよび提供される全てのアプリに関して、以下の規約が適用されます。</p>
         <ol>
