--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 border-radius: 50% !important;
                 object-fit: cover;
             ">
-        <p>利用規約:</p>
+        <p>利用規約: by okabe(admin)</p>
         <p>ConaStudioおよび提供される全てのアプリに関して、以下の規約が適用されます。</p>
         <ol>
             <li>いかなる損害についても、ConaStudioは一切責任を負いません。</li>
