--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <div id="policy" class="section">
         <h3>Policy</h3>
-        <img src="./無題.png" alt="icon" style="
+        <img src="./mosaic.png" alt="icon" style="
                 width: 150px;
                 height: 150px;
                 border-radius: 50% !important;
