--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <h3>Home</h3>
         <p>※管理者情報</p>
         <p>連絡先:
-            <a href="https://scratch.mit.edu/projects/1216659928/" target="_blank">url</a>
+            <a href="https://conastudio.f5.si/contact/" target="_blank">url</a>
         </p>
         <p>サポート:
-            <a href="https://support.conastudio.f5.si" target="_blank">url</a>
+            <a href="https://conastudio.f5.si/support" target="_blank">url</a>
         </p>
     </div>
 
