--- a/support/index.html
+++ b/support/index.html
@@ -68,7 +68,7 @@
 <body>
     <h1>ConaStudio</h1>
     <div id="home" class="section">
-        <h3>support</h3>
+        <h3>Support</h3>
         <p>サポートフォーム: <a href="https://cona.threading.nyth.online"></a></p>
     </div>
 </body>
