--- a/contact/index.html
+++ b/contact/index.html
@@ -71,7 +71,7 @@
 
     <div id="home" class="section">
         <h3>Contact us</h3>
-        <p>連絡先: <a href="mailto:cona@f5.si"></p>
+        <p>連絡先: <a href="mailto:cona@f5.si">cona@f5.si</a></p>
     </div>
 </body>
 </html>
