--- a/support/index.html
+++ b/support/index.html
@@ -69,7 +69,7 @@
     <h1>ConaStudio</h1>
     <div id="home" class="section">
         <h3>Support</h3>
-        <p>サポートフォーム: <a href="https://cona.threading.nyth.online"></a></p>
+        <p>サポートフォーム: <a href="https://cona.threading.nyth.online">cona <span style="color: blue;">[nyththreading]</span></a></p>
     </div>
 </body>
 </html>
