--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             }
         </style>
 
+        <a href="?section=home" style="text-decoration: none;">
         <div
             class="logo"
             style="
@@ -122,6 +123,7 @@
                 </p>
             </div>
         </div>
+        </a>
         <a href="?section=home">Home</a>
         <a href="?section=apps">Apps</a>
         <a href="?section=info">Info</a>
