--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             }
         </style>
 
-        <a href="?section=home" style="text-decoration: none;">
+        <a href="" style="text-decoration: none;">
         <div
             class="logo"
             style="
@@ -124,7 +124,7 @@
             </div>
         </div>
         </a>
-        <a href="?section=home">Home</a>
+        <a href="">Home</a>
         <a href="?section=apps">Apps</a>
         <a href="?section=info">Info</a>
         <a href="?section=policy">Policy (必ずお読みください)</a>
